# emae450RoboFInal

turtlebot4_ws/install/: local_setup.sh  setup.sh
turtlebot4_ws/install/turtlebot4_base/lib/turtlebot4_base/: turtlebot4_base_node
turtlebot4_ws/install/turtlebot4_base/share/turtlebot4_base/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
turtlebot4_ws/install/turtlebot4_bringup/share/turtlebot4_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
turtlebot4_ws/install/turtlebot4_description/share/turtlebot4_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot4_ws/install/turtlebot4_desktop/share/turtlebot4_desktop/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
turtlebot4_ws/install/turtlebot4_diagnostics/share/turtlebot4_diagnostics/: package.ps1  package.sh  package.xml
turtlebot4_ws/install/turtlebot4_msgs/share/turtlebot4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
turtlebot4_ws/log/: latest_build
turtlebot4_ws/src/autonomous_navigation/: package.xml  setup.py
turtlebot4_ws/src/autonomous_navigation/autonomous_navigation/: autonomous_navigation.py  basic_wall_follower.py
turtlebot4_ws/src/turtlebot4_controller/: CMakeLists.txt  package.xml
turtlebot4_ws/src/turtlebot4_controller/src/: tb4_controller.cpp
(+229 files in other folders)
